Bug 749935 - Make all nsRect Union methods saturating.  If width/height overflows nscoord_MAX then clamp the x/y to nscoord_MIN / 2 and try again.  r=roc